# hyprconfig

./: .gitignore  Cargo.toml  README.md  biome.json  justfile  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json  tauri.dev.conf.json  vite.config.ts
scripts/: install.js  uninstall.js
src/: App.css  App.tsx  dashboard.rs  filesystem.rs  hyprland_backend.rs  index.css  main.rs  navigation.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_backend.rs  config_backend.rs  hyprland_backend.rs  hyprpaper_backend.rs  main.rs  os_backend.rs
src/components/: SettingsLayout.tsx  Sidebar.tsx  app-sidebar.tsx
src/components/about/: DiskSpaceField.tsx  InfoField.tsx  SystemInfoSkeleton.tsx
src/components/audio/: AudioDeviceCard.tsx  AudioSkeletons.tsx  AudioStreamCard.tsx
src/components/displays/: DisplaySkeleton.tsx
src/components/envvars/: columns.tsx  index.ts
src/components/icons/: hyprland.tsx
src/components/keybinds/: CommandWithVariables.tsx  KeybindFormDialog.tsx  KeybindTableRow.tsx  KeybindsTableSkeleton.tsx  ModifierBadges.tsx  columns.tsx  index.ts
src/components/network/: NetworkInterfaceCard.tsx  NetworkInterfaceDetail.tsx  NetworkSkeletons.tsx  (+1 more)
src/constants/: keybinds.ts
src/hooks/: use-theme.ts
src/lib/: theme-loader.ts
src/pages/: About.tsx  Appearance.tsx  Audio.tsx  Display.tsx  Displays.tsx  EnvVars.tsx  General.tsx  Keybinds.tsx  Layerrules.tsx  Network.tsx  Variables.tsx  Windowrules.tsx
src/screens/: about.rs  appearance.rs  display.rs  keyboard.rs  mod.rs  network.rs  plugins.rs
src/types/: audio.ts  envvars.ts  keybinds.ts  layerrules.ts  variables.ts  windowrules.ts
src/utils/: keybinds.ts
ui/: index.html  package.json  vite.config.js
ui/src/: App.css  App.jsx  index.css
(+12 files in other folders)
