[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Alex Spinu"]
edition = "2024"
default-run = "tauri-app"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
hyprland = { version = "0.4.0-beta.3", features = ["default", "hyprpaper", "dispatch", "ctl", "config", "data", "keyword", "listener", "tokio", "async-lite", "ahash"] }
tokio = { version = "1.48.0", features = ["time"] }
hyprlang = { version = "0.4.2", features = ["hyprland", "mutation"] }
toml_edit = "0.23"
pipewire = "0.9"
